--- a/Android/Lead/app/build.gradle
+++ b/Android/Lead/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    buildToolsVersion '21.1.2'
 
     defaultConfig {
         applicationId "com.orbital.lead"
@@ -20,6 +20,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile files('libs/picasso-2.5.2.jar')
     compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.android.support:support-v4:22.1.1'
+    compile 'com.android.support:cardview-v7:22.1.1'
+    compile 'com.android.support:recyclerview-v7:22.1.1'
+    compile 'com.android.support:gridlayout-v7:22.1.1'
+    compile 'com.android.support:palette-v7:22.1.1'
+    compile 'com.nispok:snackbar:2.10.+'
+    compile 'com.facebook.android:facebook-android-sdk:4.1.0'
+    compile 'com.google.android.gms:play-services:7.3.0'
 }
