--- a/Android/Lead/app/build.gradle
+++ b/Android/Lead/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 21
     buildToolsVersion '21.1.2'
 
     defaultConfig {
         applicationId "com.orbital.lead"
-        minSdkVersion 10
+        minSdkVersion 12
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -22,13 +22,15 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/picasso-2.5.2.jar')
-    compile 'com.android.support:appcompat-v7:22.1.1'
-    compile 'com.android.support:support-v4:22.1.1'
-    compile 'com.android.support:cardview-v7:22.1.1'
-    compile 'com.android.support:recyclerview-v7:22.1.1'
-    compile 'com.android.support:gridlayout-v7:22.1.1'
-    compile 'com.android.support:palette-v7:22.1.1'
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.android.support:cardview-v7:22.2.0'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
+    compile 'com.android.support:gridlayout-v7:22.2.0'
+    compile 'com.android.support:palette-v7:22.2.0'
     compile 'com.nispok:snackbar:2.10.+'
     compile 'com.facebook.android:facebook-android-sdk:4.1.0'
     compile 'com.google.android.gms:play-services:7.3.0'
+    compile 'com.github.ksoichiro:android-observablescrollview:1.5.2'
+    compile 'com.nineoldandroids:library:2.4.0'
 }
