--- a/Android/Lead/app/build.gradle
+++ b/Android/Lead/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.orbital.lead"
-        minSdkVersion 12
+        minSdkVersion 14
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -38,4 +38,6 @@ dependencies {
     compile 'com.amazonaws:aws-android-sdk-cognito:2.2.1'
     compile 'com.amazonaws:aws-android-sdk-s3:2.2.1'
     compile 'com.amazonaws:aws-android-sdk-ddb:2.2.1'
+    compile 'com.joooonho:selectableroundedimageview:1.0.1'
+    compile 'com.github.clans:fab:1.5.2'
 }
