--- a/Android/Lead/app/src/main/AndroidManifest.xml
+++ b/Android/Lead/app/src/main/AndroidManifest.xml
@@ -3,16 +3,18 @@
     package="com.orbital.lead" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <!--
      To retrieve OAuth 2.0 tokens or invalidate tokens to disconnect a user. This disconnect
      option is required to comply with the Google+ Sign-In developer policies
     -->
-    <uses-permission android:name="android.permission.USE_CREDENTIALS" /> <!-- To retrieve the account name (email) as part of sign-in: -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" /> <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <!--
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-
+    -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_lead"
@@ -23,34 +25,32 @@
             android:value="@string/facebook_app_id" />
 
         <activity
-            android:name=".controller.LoginActivity"
+            android:name=".controller.Activity.LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".controller.MainActivity"
-            android:label="@string/app_name">
-
+            android:name=".controller.Activity.MainActivity"
+            android:label="@string/app_name" >
         </activity>
-
-
-
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
-
-
         <!-- Declaring Service -->
-        <service
-            android:name=".controller.Service.S3Service" />
+        <service android:name=".controller.Service.S3Service" />
+        <service android:name=".controller.Service.JournalService" />
 
+        <activity
+            android:name=".controller.Activity.SpecificJournalActivity"
+            android:label="@string/title_activity_specific_journal" >
+        </activity>
     </application>
 
 </manifest>
