--- a/Android/Lead/app/build.gradle
+++ b/Android/Lead/app/build.gradle
@@ -21,6 +21,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile files('libs/universal-image-loader-1.9.4.jar')
     compile files('libs/picasso-2.5.2.jar')
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:support-v4:22.2.0'
@@ -40,4 +41,5 @@ dependencies {
     compile 'com.amazonaws:aws-android-sdk-ddb:2.2.1'
     compile 'com.joooonho:selectableroundedimageview:1.0.1'
     compile 'com.github.clans:fab:1.5.2'
+
 }
