--- a/Android/Lead/app/src/main/AndroidManifest.xml
+++ b/Android/Lead/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     -->
     <application
+        android:name=".controller.CustomApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_lead"
         android:label="@string/app_name"
@@ -51,14 +52,16 @@
         <activity
             android:name=".controller.Activity.SpecificJournalActivity"
             android:label="@string/title_activity_specific_journal"
-            android:parentActivityName=".controller.Activity.MainActivity">
+            android:parentActivityName=".controller.Activity.MainActivity" >
         </activity>
-
         <activity
             android:name=".controller.Activity.PictureActivity"
             android:label="@string/title_activity_picture" >
         </activity>
-
+        <activity
+            android:name=".controller.Activity.EditSpecificJournalActivity"
+            android:label="@string/title_activity_edit_specific_journal" >
+        </activity>
     </application>
 
 </manifest>
