Updates in Edit Journal Page
1. Added edit tag options
2. Added project options
3. Create popup menu for each tag and project

--- a/Android/Lead/app/build.gradle
+++ b/Android/Lead/app/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     compile 'com.amazonaws:aws-android-sdk-ddb:2.2.1'
     compile 'com.joooonho:selectableroundedimageview:1.0.1'
     compile 'com.github.clans:fab:1.5.2'
+    compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
 
 }
