--- a/Android/Lead/app/src/main/AndroidManifest.xml
+++ b/Android/Lead/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <!--
      To retrieve OAuth 2.0 tokens or invalidate tokens to disconnect a user. This disconnect
      option is required to comply with the Google+ Sign-In developer policies
@@ -60,6 +61,10 @@
         <activity
             android:name=".controller.Activity.EditSpecificJournalActivity"
             android:label="@string/title_activity_edit_specific_journal" >
+        </activity>
+        <activity
+            android:name=".controller.Activity.ProfileActivity"
+            android:label="@string/title_activity_profile" >
         </activity>
     </application>
 
