--- a/Android/Lead/app/build.gradle
+++ b/Android/Lead/app/build.gradle
@@ -35,12 +35,24 @@ dependencies {
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.2'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
-    compile 'com.amazonaws:aws-android-sdk-core:2.2.1'
-    compile 'com.amazonaws:aws-android-sdk-cognito:2.2.1'
-    compile 'com.amazonaws:aws-android-sdk-s3:2.2.1'
-    compile 'com.amazonaws:aws-android-sdk-ddb:2.2.1'
     compile 'com.joooonho:selectableroundedimageview:1.0.1'
     compile 'com.github.clans:fab:1.5.2'
     compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
+    compile ('org.apache.httpcomponents:httpcore:4.3.2') {
+        exclude module: 'httpclient'
+    }
+    compile ('org.apache.httpcomponents:httpmime:4.3.6') {
+        exclude module: 'httpclient'
+    }
 
+}
+
+android {
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
